--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.2.15",
+  "version": "0.2.16",
   "description": "Evaluates chosen modules",
   "main": "dist/index.js",
   "files": [
@@ -35,7 +35,7 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "0.2.2",
-    "@qualweb/types": "0.6.9",
+    "@qualweb/types": "0.6.11",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^15.12.5",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
@@ -57,9 +57,9 @@
     "@qualweb/act-rules": "0.5.9",
     "@qualweb/best-practices": "0.5.3",
     "@qualweb/counter": "0.2.0",
-    "@qualweb/qw-page": "0.2.8",
+    "@qualweb/qw-page": "0.2.11",
     "@qualweb/util": "0.5.12",
     "@qualweb/wappalyzer": "0.3.1",
-    "@qualweb/wcag-techniques": "^0.2.4"
+    "@qualweb/wcag-techniques": "0.2.5"
   }
 }
