--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.2.11",
+  "version": "0.2.12",
   "description": "Utilities module for qualweb",
   "main": "dist/qw-page.bundle.js",
   "files": [
@@ -34,7 +34,7 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "^0.2.2",
-    "@qualweb/types": "^0.6.11",
+    "@qualweb/types": "0.6.13",
     "@tsconfig/recommended": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
@@ -49,10 +49,10 @@
     "rimraf": "^3.0.2",
     "typedoc": "^0.21.4",
     "typescript": "^4.2.4",
-    "webpack": "^5.45.1",
+    "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "@qualweb/qw-element": "0.2.6"
+    "@qualweb/qw-element": "0.2.7"
   }
 }
