--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Processes necessary page data for qualweb accessibility evaluation.",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm",
+    "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
@@ -36,24 +36,23 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "0.6.9",
+    "@qualweb/types": "^0.6.13",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.12.5",
-    "@types/node-fetch": "^2.5.10",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/node": "^16.4.1",
+    "@types/node-fetch": "^2.5.12",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
-    "eslint": "^7.29.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-sonarjs": "^0.6.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.4.0",
+    "eslint-plugin-sonarjs": "^0.9.1",
+    "mocha": "^9.0.2",
     "prettier": "^2.3.2",
-    "puppeteer": "^8.0.0",
+    "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.21.2",
-    "typescript": "^4.2.4"
+    "typedoc": "^0.21.4",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "node-fetch": "^2.6.1"
