Fixed QW-WCAG-T17 bugs. Updated dependencies

--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.bundle.js",
   "files": [
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm test/**/*",
-    "test:url": "mocha --require esm test/url.spec.js",
+    "test": "mocha test/**/*",
+    "test:url": "mocha test/url.spec.mjs",
     "compile:techniques": "node compile-techniques.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
@@ -38,26 +38,25 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.2.1",
-    "@qualweb/qw-page": "^0.2.10",
-    "@qualweb/types": "^0.6.11",
-    "@qualweb/util": "^0.5.12",
+    "@qualweb/dom": "0.2.3",
+    "@qualweb/qw-page": "0.2.12",
+    "@qualweb/types": "0.6.13",
+    "@qualweb/util": "0.5.12",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.12.4",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@types/node": "^16.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
-    "eslint": "^7.29.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-sonarjs": "^0.7.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.4.0",
-    "prettier": "^2.3.1",
-    "puppeteer": "^9.1.1",
+    "eslint-plugin-sonarjs": "^0.9.1",
+    "mocha": "^9.0.2",
+    "prettier": "^2.3.2",
+    "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.3.4",
-    "webpack": "^5.39.1",
+    "typescript": "^4.3.5",
+    "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
   }
 }
