--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "description": "Evaluates chosen modules",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm",
+    "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
@@ -34,24 +34,23 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.2",
+    "@qualweb/dom": "0.2.3",
     "@qualweb/types": "0.6.13",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.12.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/node": "^16.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
-    "eslint": "^7.29.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-sonarjs": "^0.7.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.4.0",
+    "eslint-plugin-sonarjs": "^0.9.1",
+    "mocha": "^9.0.2",
     "prettier": "^2.3.2",
-    "puppeteer": "^9.1.1",
+    "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.21.2",
-    "typescript": "^4.2.4"
+    "typedoc": "^0.21.4",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@qualweb/act-rules": "0.5.10",
@@ -60,6 +59,6 @@
     "@qualweb/qw-page": "0.2.12",
     "@qualweb/util": "0.5.12",
     "@qualweb/wappalyzer": "0.3.1",
-    "@qualweb/wcag-techniques": "0.2.5"
+    "@qualweb/wcag-techniques": "0.2.6"
   }
 }
