Updated dependencies and test files

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.6.14",
+  "version": "0.6.15",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -8,15 +8,15 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm",
-    "test:core": "mocha --require esm test/core.spec.js",
-    "test:html": "mocha --require esm test/html.spec.js",
-    "test:crawler": "mocha --require esm test/crawler.spec.js",
-    "test:file": "mocha --require esm test/file.spec.js",
-    "test:urls": "mocha --require esm test/urls.spec.js",
-    "test:parallel": "mocha --require esm test/parallel.spec.js",
-    "test:validator": "mocha --require esm test/validator.spec.js",
-    "test:wp": "mocha --require esm test/wappalyzer.spec.js",
+    "test": "mocha",
+    "test:core": "mocha test/core.spec.mjs",
+    "test:html": "mocha test/html.spec.mjs",
+    "test:crawler": "mocha test/crawler.spec.mjs",
+    "test:file": "mocha test/file.spec.mjs",
+    "test:urls": "mocha test/urls.spec.mjs",
+    "test:parallel": "mocha test/parallel.spec.mjs",
+    "test:validator": "mocha test/validator.spec.mjs",
+    "test:wp": "mocha test/wappalyzer.spec.mjs",
     "prebuild": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
@@ -66,9 +66,9 @@
   "license": "ISC",
   "dependencies": {
     "@qualweb/crawler": "0.3.9",
-    "@qualweb/dom": "0.2.2",
+    "@qualweb/dom": "0.2.3",
     "@qualweb/earl-reporter": "0.4.1",
-    "@qualweb/evaluation": "0.2.17",
+    "@qualweb/evaluation": "0.2.18",
     "colors": "^1.4.0",
     "puppeteer": "^10.1.0",
     "puppeteer-cluster": "^0.22.0",
@@ -79,20 +79,19 @@
   "devDependencies": {
     "@qualweb/types": "0.6.13",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^15.12.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/node": "^16.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "chai": "^4.3.4",
-    "eslint": "^7.29.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-sonarjs": "^0.7.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.4.0",
+    "eslint-plugin-sonarjs": "^0.9.1",
+    "mocha": "^9.0.2",
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.21.2",
-    "typescript": "^4.2.4"
+    "typedoc": "^0.21.4",
+    "typescript": "^4.3.5"
   }
 }
