--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -50,10 +50,10 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.2.1",
-    "@qualweb/qw-page": "^0.2.7",
-    "@qualweb/types": "^0.5.19",
-    "@qualweb/util": "^0.5.7",
+    "@qualweb/dom": "^.2.2",
+    "@qualweb/qw-page": "0.2.12",
+    "@qualweb/types": "0.6.13",
+    "@qualweb/util": "0.5.12",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^14.14.41",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
