--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -39,13 +39,14 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "0.2.3",
+    "@qualweb/locale": "0.1.3-alpha",
     "@qualweb/qw-page": "0.2.12",
-    "@qualweb/types": "0.7.7-alpha",
+    "@qualweb/types": "0.7.8-alpha",
     "@qualweb/util": "0.5.12",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^16.4.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "chai": "^4.3.4",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
