--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.6.0-alpha",
+  "version": "0.6.1-alpha",
   "description": "QualWeb best practices",
   "main": "dist/bp.bundle.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test:url": "mocha test/url.spec.js",
+    "test:url": "mocha test/url.spec.mjs",
     "test:bp1": "mocha test/best-practices/QW-BP1.spec.mjs",
     "test:bp2": "mocha test/best-practices/QW-BP2.spec.mjs",
     "test:bp4": "mocha test/best-practices/QW-BP4.spec.mjs",
@@ -51,19 +51,20 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "0.2.3",
+    "@qualweb/locale": "0.1.3-alpha",
     "@qualweb/qw-page": "0.2.12",
-    "@qualweb/types": "0.7.7-alpha",
+    "@qualweb/types": "0.7.8-alpha",
     "@qualweb/util": "0.5.12",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^16.4.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "chai": "^4.3.4",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-sonarjs": "^0.9.1",
-    "mocha": "^8.3.2",
+    "mocha": "^9.0.3",
     "prettier": "^2.3.2",
     "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
