--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.3.0-alpha",
+  "version": "0.3.1",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.bundle.js",
   "files": [
@@ -39,12 +39,12 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "0.2.3",
-    "@qualweb/locale": "0.1.3-alpha",
+    "@qualweb/locale": "0.1.4",
     "@qualweb/qw-page": "0.2.12",
-    "@qualweb/types": "0.7.8-alpha",
+    "@qualweb/types": "0.7.9",
     "@qualweb/util": "0.5.12",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^16.4.3",
+    "@types/node": "^16.4.5",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "chai": "^4.3.4",
@@ -57,7 +57,7 @@
     "puppeteer": "^10.1.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5",
-    "webpack": "^5.46.0",
+    "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2"
   }
 }
