--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -70,7 +70,7 @@
     "@qualweb/dom": "0.2.3",
     "@qualweb/earl-reporter": "0.4.1",
     "@qualweb/evaluation": "0.3.2",
-    "@qualweb/locale": "0.1.4",
+    "@qualweb/locale": "0.1.5",
     "colors": "^1.4.0",
     "puppeteer": "^10.1.0",
     "puppeteer-cluster": "^0.22.0",
@@ -79,7 +79,7 @@
     "puppeteer-extra-plugin-stealth": "^2.7.8"
   },
   "devDependencies": {
-    "@qualweb/types": "0.7.9",
+    "@qualweb/types": "^0.7.10",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^16.4.5",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
