--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.7.12",
+  "version": "0.7.13",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -70,11 +70,11 @@
     "@qualweb/crawler": "0.3.12",
     "@qualweb/dom": "0.2.4",
     "@qualweb/earl-reporter": "0.4.1",
-    "@qualweb/evaluation": "0.3.7",
+    "@qualweb/evaluation": "0.3.8",
     "@qualweb/locale": "0.1.10",
     "colors": "^1.4.0",
     "puppeteer": "^10.4.0",
-    "puppeteer-cluster": "^0.22.0",
+    "puppeteer-cluster3": "^1.0.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0"
@@ -82,19 +82,19 @@
   "devDependencies": {
     "@qualweb/types": "0.7.16",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@types/node": "^16.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "chai": "^4.3.4",
-    "eslint": "^8.2.0",
+    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint-plugin-sonarjs": "^0.11.0",
     "mocha": "^9.1.3",
-    "node-fetch": "^2.6.6",
-    "prettier": "^2.4.1",
+    "node-fetch": "^3.1.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "typedoc": "^0.22.9",
-    "typescript": "^4.4.4"
+    "typedoc": "^0.22.10",
+    "typescript": "^4.5.3"
   }
 }
