--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Processes necessary page data for qualweb accessibility evaluation.",
   "main": "dist/index.js",
   "files": [
@@ -13,7 +13,7 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prebuild": "rimraf dist",
-    "build": "npm run format && npm run lint && npm run prebuild && tsc --build",
+    "build": "npm run format && npm run lint && tsc --build",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/dom#readme",
