--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.bundle.js",
   "files": [
@@ -14,8 +14,9 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prebuild": "npm run compile:techniques && rimraf prebuild && npm run format && tsc --build",
-    "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
+    "prebuild": "npm run compile:techniques && rimraf prebuild && npm run format && rimraf dist ",
+    "build": "tsc --build && webpack --mode production",
+    "postbuild": "rimraf prebuild",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
@@ -38,25 +39,25 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.4",
+    "@qualweb/dom": "0.2.5",
     "@qualweb/locale": "0.1.10",
     "@qualweb/qw-page": "0.2.12",
     "@qualweb/types": "0.7.16",
     "@qualweb/util": "0.5.13",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "chai": "^4.3.4",
-    "eslint": "^8.4.1",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.11.0",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
-    "puppeteer": "^13.0.0",
+    "puppeteer": "^13.0.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.5.3",
+    "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
