--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.3.9",
+  "version": "0.3.10",
   "description": "Evaluates chosen modules",
   "main": "dist/index.js",
   "files": [
@@ -14,7 +14,7 @@
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "docs": "typedoc --out docs src/index.ts",
     "prebuild": "rimraf dist",
-    "build": "npm run format && npm run prebuild && tsc --build",
+    "build": "npm run format && tsc --build",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/evaluation#readme",
@@ -34,24 +34,24 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.4",
+    "@qualweb/dom": "0.2.5",
     "@qualweb/locale": "0.1.10",
     "@qualweb/types": "0.7.16",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "chai": "^4.3.4",
-    "eslint": "^8.4.1",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.11.0",
     "mocha": "^9.1.3",
     "prettier": "^2.5.1",
-    "puppeteer": "^13.0.0",
+    "puppeteer": "^13.0.1",
     "rimraf": "^3.0.2",
     "typedoc": "^0.22.10",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@qualweb/act-rules": "0.6.7",
@@ -60,6 +60,6 @@
     "@qualweb/qw-page": "0.2.12",
     "@qualweb/util": "0.5.13",
     "@qualweb/wappalyzer": "0.3.2",
-    "@qualweb/wcag-techniques": "0.3.3"
+    "@qualweb/wcag-techniques": "0.3.4"
   }
 }
