--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.7.16",
+  "version": "0.7.17",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -70,11 +70,11 @@
     "@qualweb/crawler": "0.3.12",
     "@qualweb/dom": "0.2.5",
     "@qualweb/earl-reporter": "0.4.1",
-    "@qualweb/evaluation": "0.3.10",
+    "@qualweb/evaluation": "0.3.11",
     "@qualweb/locale": "0.1.10",
     "colors": "^1.4.0",
-    "puppeteer": "^10.4.0",
-    "puppeteer-cluster3": "^1.0.0",
+    "puppeteer": "13.1.2",
+    "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0"
