--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/core",
-  "version": "0.7.17",
+  "version": "0.7.18",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "files": [
@@ -72,8 +72,8 @@
     "@qualweb/earl-reporter": "0.4.1",
     "@qualweb/evaluation": "0.3.11",
     "@qualweb/locale": "0.1.10",
-    "colors": "^1.4.0",
-    "puppeteer": "13.1.2",
+    "colors": "1.4.0",
+    "puppeteer": "13.1.3",
     "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
@@ -82,11 +82,11 @@
   "devDependencies": {
     "@qualweb/types": "0.7.16",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@types/node": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "chai": "^4.3.4",
-    "eslint": "^8.6.0",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.11.0",
