--- a/packages/best-practices/.eslintrc
+++ b/packages/best-practices/.eslintrc
@@ -14,6 +14,6 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": 2
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
   }
 }
