--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -24,6 +24,10 @@
     "test:bp15": "mocha test/best-practices/QW-BP15.spec.mjs",
     "test:bp17": "mocha test/best-practices/QW-BP17.spec.mjs",
     "test:bp18": "mocha test/best-practices/QW-BP18.spec.mjs",
+    "test:bp19": "mocha test/best-practices/QW-BP19.spec.mjs",
+    "test:bp20": "mocha test/best-practices/QW-BP20.spec.mjs",
+    "test:bp21": "mocha test/best-practices/QW-BP21.spec.mjs",
+    "test:bp22": "mocha test/best-practices/QW-BP22.spec.mjs",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
