added testing files

--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -28,6 +28,10 @@
     "test:bp20": "mocha test/best-practices/QW-BP20.spec.mjs",
     "test:bp21": "mocha test/best-practices/QW-BP21.spec.mjs",
     "test:bp22": "mocha test/best-practices/QW-BP22.spec.mjs",
+    "test:bp23": "mocha test/best-practices/QW-BP23.spec.mjs",
+    "test:bp24": "mocha test/best-practices/QW-BP24.spec.mjs",
+    "test:bp25": "mocha test/best-practices/QW-BP25.spec.mjs",
+    "test:bp26": "mocha test/best-practices/QW-BP26.spec.mjs",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
