feat: add JSON schema validation

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -10,11 +10,12 @@
     "tsc": "tsc",
     "test": "mocha test/rule.spec.mjs",
     "test:url": "mocha test/url.spec.mjs",
+    "validate:rules": "node validate-rules.js",
     "compile:rules": "node compile-rules.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prebuild": "npm run compile:rules && rimraf prebuild && tsc --build",
+    "prebuild": "npm run validate:rules && npm run compile:rules && rimraf prebuild && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "prepare": "npm run build"
   },
@@ -43,6 +44,7 @@
     "@types/node": "^16.11.11",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "ajv": "^6.12.6",
     "chai": "^4.3.4",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
