--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -10,11 +10,13 @@
     "tsc": "tsc",
     "test": "mocha test/**/*",
     "test:url": "mocha test/url.spec.mjs",
+    "test:t33": "mocha test/techniques/QW-WCAG-T33.spec.mjs",
+    "test:t34": "mocha test/techniques/QW-WCAG-T34.spec.mjs",
     "compile:techniques": "node compile-techniques.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prebuild": "npm run compile:techniques && rimraf prebuild && npm run format && rimraf dist ",
+    "prebuild": "npm run compile:techniques && rimraf prebuild && rimraf dist ",
     "build": "tsc --build && webpack --mode production",
     "postbuild": "rimraf prebuild",
     "prepare": "npm run build"
