--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.3.12",
+  "version": "0.3.13",
   "description": "Evaluates chosen modules",
   "main": "dist/index.js",
   "files": [
@@ -14,7 +14,7 @@
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "docs": "typedoc --out docs src/index.ts",
     "prebuild": "rimraf dist",
-    "build": "npm run format && tsc --build",
+    "build": "tsc --build",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/evaluation#readme",
@@ -55,11 +55,11 @@
   },
   "dependencies": {
     "@qualweb/act-rules": "0.6.8",
-    "@qualweb/best-practices": "0.6.6",
+    "@qualweb/best-practices": "0.6.7",
     "@qualweb/counter": "0.2.0",
     "@qualweb/qw-page": "0.2.12",
-    "@qualweb/util": "0.5.13",
+    "@qualweb/util": "0.5.14",
     "@qualweb/wappalyzer": "0.3.3",
-    "@qualweb/wcag-techniques": "0.3.4"
+    "@qualweb/wcag-techniques": "0.3.6"
   }
 }
