--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-element",
-  "version": "0.2.7",
+  "version": "0.2.8",
   "description": "QualWeb element interface and utilities",
   "main": "dist/index.js",
   "files": [
@@ -13,7 +13,7 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "build": "npm run format && npm run prebuild && tsc --build",
+    "build": "npm run prebuild && tsc --build",
     "docs": "typedoc --out docs src/index.ts",
     "prepare": "npm run build"
   },
@@ -34,7 +34,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "0.6.13",
+    "@qualweb/types": "0.7.21",
     "@tsconfig/recommended": "^1.0.1",
     "@types/node": "^16.4.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
