--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.2.12",
+  "version": "0.2.13",
   "description": "Utilities module for qualweb",
   "main": "dist/qw-page.bundle.js",
   "files": [
@@ -12,7 +12,7 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prebuild": "rimraf prebuild && npm run format && tsc --build",
+    "prebuild": "rimraf prebuild  && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "docs": "typedoc --out docs src/index.ts",
     "prepare": "npm run build"
@@ -34,7 +34,7 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "^0.2.2",
-    "@qualweb/types": "0.6.13",
+    "@qualweb/types": "0.7.21",
     "@tsconfig/recommended": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
@@ -53,6 +53,6 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "@qualweb/qw-element": "0.2.7"
+    "@qualweb/qw-element": "0.2.8"
   }
 }
