--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -10,6 +10,7 @@
     "tsc": "tsc",
     "test": "mocha test/**/*",
     "test:url": "mocha test/url.spec.mjs",
+    "test:t17": "mocha test/techniques/QW-WCAG-T17.spec.mjs",
     "test:t33": "mocha test/techniques/QW-WCAG-T33.spec.mjs",
     "test:t34": "mocha test/techniques/QW-WCAG-T34.spec.mjs",
     "compile:techniques": "node compile-techniques.js",
