--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -30,6 +30,7 @@
     "test:bp22": "mocha test/best-practices/QW-BP22.spec.mjs",
     "test:bp23": "mocha test/best-practices/QW-BP23.spec.mjs",
     "test:bp24": "mocha test/best-practices/QW-BP24.spec.mjs",
+    "test:bp28": "mocha test/best-practices/QW-BP28.spec.mjs",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
