--- a/packages/act-rules/.github/workflows/release.yml
+++ b/packages/act-rules/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: unit_tests # Release step will ONLY run if unit tests complete.
+    # needs: unit_tests # Release step will ONLY run if unit tests complete.
     steps:
       - name: Checkout
         uses: actions/checkout@v4
