--- a/packages/act-rules/.github/actions/install_and_cache_dependencies/action.yml
+++ b/packages/act-rules/.github/actions/install_and_cache_dependencies/action.yml
@@ -35,4 +35,4 @@ runs:
     # removes node_modules before running.
     - name: Install dependencies
       shell: bash
-      run: npm ci
+      run: npm i
