--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -59,6 +59,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@qualweb/dom": "0.2.4",
     "@qualweb/locale": "0.1.11",
     "@qualweb/qw-page": "0.2.12",
