--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,9 @@
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "build": "tsc --build",
     "docs": "typedoc --out docs src/index.ts",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "release": "npm run build && npx changeset publish",
+    "release-snapshot": "npm run build && npx changeset version --snapshot next && npx changeset publish --tag next"
   },
   "keywords": [
     "qualweb",
