--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prebuild": "rimraf dist",
     "build": "npm run format && npm run lint && tsc --build",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "release": "npm run build && npx changeset publish",
+    "release-snapshot": "npm run build && npx changeset version --snapshot next && npx changeset publish --tag next"
   },
   "homepage": "https://github.com/qualweb/dom#readme",
   "repository": {
