--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -15,6 +15,8 @@
     "docs": "typedoc --out docs src/index.ts",
     "prebuild": "rimraf dist",
     "build": "tsc --build",
+    "release": "npm run build && npx changeset publish",
+    "release-snapshot": "npm run build && npx changeset version --snapshot next && npx changeset publish --tag next",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/evaluation#readme",
