--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -15,6 +15,8 @@
     "prebuild": "rimraf prebuild  && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "docs": "typedoc --out docs src/index.ts",
+    "release": "npm run build && npx changeset publish",
+    "release-snapshot": "npm run build && npx changeset version --snapshot next && npx changeset publish --tag next",
     "prepare": "npm run build"
   },
   "homepage": "https://github.com/qualweb/qw-page#readme",
