--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -35,6 +35,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@qualweb/dom": "^0.2.2",
     "@qualweb/types": "0.7.21",
     "@tsconfig/recommended": "^1.0.1",
