--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -11,7 +11,7 @@
     "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "format": "prettier --config .prettierrc src/**/*.ts --write",
     "prebuild": "rimraf dist",
     "build": "npm run format && npm run lint && tsc --build",
     "prepublishOnly": "npm run build"
@@ -39,7 +39,6 @@
     "@qualweb/types": "0.7.23",
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^16.11.7",
-    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
@@ -55,6 +54,6 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "node-fetch": "^2.6.6"
+    "axios": "^1.6.2"
   }
 }
