--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -12,7 +12,7 @@
     "prebuild": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "format": "prettier --config .prettierrc src/**/*.ts --write",
     "build": "npm run prebuild && tsc --build",
     "prepublishOnly": "npm run build"
   },
