--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -15,7 +15,7 @@
     "test:elementHidden": "mocha --require esm test/elementHidden.spec.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "format": "prettier --config .prettierrc src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build",
     "build": "rimraf dist && npm run prebuild && webpack --mode production && rimraf prebuild",
     "docs": "typedoc --out docs src/index.ts",
