chore: move a ton of eslint config to root [skip ci]
Also migrating to new eslint flat configs, revisiting plugins/configs.

--- a/packages/best-practices/.eslintrc
+++ b/packages/best-practices/.eslintrc
@@ -1,19 +1,10 @@
 {
-  "root": true,
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint",
-    "sonarjs",
-    "prettier"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:sonarjs/recommended",
-    "prettier"
-  ],
   "rules": {
-    "prettier/prettier": ["error", { "endOfLine": "auto" }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
