chore: move prettier configurations to root [skip ci]

--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf dist",
     "build": "npm run prebuild && tsc --build",
     "prepublishOnly": "npm run build"
