--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -11,7 +11,7 @@
     "test": "mocha --require esm test/counter.spec.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "prebuild": "npm run format && npm run lint:fix && rimraf prebuild && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "prepublishOnly": "npm run build"
