--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -11,7 +11,7 @@
     "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "docs": "typedoc --out docs src/index.ts",
     "prebuild": "rimraf dist",
     "build": "tsc --build",
