--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -12,7 +12,7 @@
     "prebuild": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "build": "npm run prebuild && tsc --build",
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
