--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -11,7 +11,7 @@
     "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild  && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "docs": "typedoc --out docs src/index.ts",
