Unify eslint configurations (#65)
* chore: move a ton of eslint config to root [skip ci]

Also migrating to new eslint flat configs, revisiting plugins/configs.

* wip: updating eslint configs [skip ci]

* chore: move prettier configurations to root [skip ci]

--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -34,7 +34,7 @@
     "test:bp28": "mocha test/best-practices/QW-BP28.spec.mjs",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "compile:bps": "node compile-bps.js",
     "prebuild": "rimraf prebuild && npm run compile:bps && rimraf dist",
     "build": "tsc --build && webpack --mode production",
@@ -66,13 +66,8 @@
     "@qualweb/util": "0.5.28",
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "mocha": "^9.1.3",
     "prettier": "^3.1.0",
     "puppeteer": "^21.5.2",
