--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -12,7 +12,7 @@
     "prebuild": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "build": "npm run prebuild && tsc --build",
     "docs": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
@@ -37,13 +37,8 @@
     "@qualweb/types": "0.7.24",
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^16.4.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "esm": "^3.2.25",
     "mocha": "^9.0.2",
     "prettier": "^3.1.0",
