--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": 2
+    "prettier/prettier": 2,
+    "sonarjs/no-duplicate-string": 0
   }
 }
