--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,7 @@
     "prebuild": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "build": "npm run prebuild && tsc --build",
     "typedoc": "typedoc --out docs src/index.ts",
     "prepublishOnly": "npm run build"
@@ -54,13 +54,8 @@
     "@types/command-line-usage": "^5.0.1",
     "@types/node": "^16.4.1",
     "@types/set-value": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "mocha": "^9.0.2",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
