--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -11,7 +11,7 @@
     "test": "mocha --require esm test/counter.spec.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "prebuild": "npm run format && npm run lint:fix && rimraf prebuild && tsc --build",
     "build": "npm run prebuild && rimraf dist && webpack --mode production && rimraf prebuild",
     "prepublishOnly": "npm run build"
@@ -41,13 +41,8 @@
     "@qualweb/util": "0.5.28",
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^14.14.37",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "esm": "^3.2.25",
     "mocha": "^8.3.2",
     "prettier": "^3.1.0",
