--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -15,7 +15,7 @@
     "test:elementHidden": "mocha --require esm test/elementHidden.spec.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build",
     "build": "rimraf dist && npm run prebuild && webpack --mode production && rimraf prebuild",
     "docs": "typedoc --out docs src/index.ts",
@@ -44,13 +44,8 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^15.6.1",
     "@types/string-pixel-width": "^1.7.1",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "esm": "^3.2.25",
     "mocha": "^8.4.0",
     "prettier": "^3.1.0",
