--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -17,7 +17,7 @@
     "compile:techniques": "node compile-techniques.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "prebuild": "npm run compile:techniques && rimraf prebuild && rimraf dist ",
     "build": "tsc --build && webpack --mode production",
     "postbuild": "rimraf prebuild",
@@ -50,13 +50,8 @@
     "@qualweb/util": "0.5.28",
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "mocha": "^9.1.3",
     "prettier": "^3.1.0",
     "puppeteer": "^21.5.2",
