test(evaluation): fix up unit test
Notably:
- add typings for chai/mocha (helps with intellisense and TS transition down the road)
- use setup/teardown functions to prepare puppeteer for unit test
- don't dump info to console, keeping output clean.

--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -38,6 +38,8 @@
     "@qualweb/locale": "0.1.16",
     "@qualweb/types": "0.7.25",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^17.0.19",
     "chai": "^5.0.0",
     "eslint": "^8.56.0",
