test(wcag-techniques): fix up unit tests [wip]
First half of tweaks. This makes better use of setup/teardown, moves test fixtures to a fixtures directory (for easier reading), and adds a fixture for a test that had only a single case.

This aligns all unit tests to pretty much look identical in execution.

--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha test/**/*",
+    "test": "mocha --config test/.mocharc.js",
     "test:url": "mocha test/url.spec.mjs",
     "test:t17": "mocha test/techniques/QW-WCAG-T17.spec.mjs",
     "test:t9": "mocha test/techniques/QW-WCAG-T9.spec.mjs",
