test(util): change test scripts to target ts files instead, tweaked some errors in util.spec.ts
unit.spec.ts still has a lot of errors. My guess is it was not kept up to date with the changing APIs in Qualweb.

--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --spec=test/**/*.spec.ts",
-    "test:ANameTest": "mocha --require esm test/ANameTest.spec.mjs",
-    "test:ANameTestWiki": "mocha --require esm test/ANameTestWiki.spec.js",
-    "test:svg": "mocha --require esm test/ANameSVGTest.spec.js",
-    "test:elementHidden": "mocha --require esm test/elementHidden.spec.js",
+    "test:ANameTest": "mocha --spec=test/ANameTest.spec.ts",
+    "test:ANameTestWiki": "mocha --spec=test/ANameTestWiki.spec.ts",
+    "test:svg": "mocha --spec=test/ANameSVGTest.spec.ts",
+    "test:elementHidden": "mocha --spec=test/elementHidden.spec.ts",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
