test: added root mocha config .mocharc.base.js
All existing .mocharc files now import the base and use it as-is. They can be modified on a case-by-case basis to specialize their configs.

Added .mocharc files for packages that didn't have them yet.

The config is for TypeScript! Refactoring incoming in the next commits.

--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -36,7 +36,8 @@
     "@qualweb/dom": "0.2.10",
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
-    "chai": "^5.0.0",
+    "@types/mocha": "^10.0.6",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
