--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -43,9 +43,10 @@
     "@qualweb/types": "0.7.26",
     "@qualweb/util": "0.5.37",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^16.11.11",
     "ajv": "^6.12.6",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "node-fetch": "^3.0.0",
