--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,9 +52,10 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/command-line-args": "^5.2.3",
     "@types/command-line-usage": "^5.0.4",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^16.4.1",
     "@types/set-value": "^4.0.3",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
