--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -83,8 +83,9 @@
   "devDependencies": {
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^17.0.19",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "node-fetch": "^3.1.0",
