--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -40,8 +40,9 @@
     "@qualweb/types": "0.7.26",
     "@qualweb/util": "0.5.37",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^14.14.37",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
