--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -38,8 +38,9 @@
   "devDependencies": {
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^16.11.7",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
