--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -42,8 +42,9 @@
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
     "@types/lodash.clonedeep": "^4.5.9",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^14.14.35",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
