--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -50,8 +50,9 @@
     "@qualweb/types": "0.7.26",
     "@qualweb/util": "0.5.37",
     "@tsconfig/recommended": "^1.0.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^17.0.8",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
