--- a/packages/earl-reporter/package.json
+++ b/packages/earl-reporter/package.json
@@ -8,12 +8,12 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha --require esm",
+    "test": "mocha",
     "prebuild": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
-    "build": "npm run prebuild && tsc --build",
+    "build": "npm run prebuild && tsc --build tsconfig.prod.json",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
