--- a/packages/evaluation/tsconfig.json
+++ b/packages/evaluation/tsconfig.json
@@ -9,7 +9,7 @@
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
     "sourceMap": true /* Generates corresponding '.map' file. */,
     "outDir": "./dist" /* Redirect output structure to the directory. */,
-    "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    "rootDir": "." /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
     "removeComments": true /* Do not emit comments to output. */,
 
     /* Strict Type-Checking Options */
@@ -29,10 +29,16 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "typeRoots": [
-      "@qualweb/types"
-    ] /* List of folders to include type definitions from. */,
-    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */,
+
+    "types": [
+      "@qualweb/types",
+      "node",
+      "mocha",
+    ] /* Type declaration files to be included in compilation. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts",
+  ],
 }
