--- a/packages/best-practices/tsconfig.json
+++ b/packages/best-practices/tsconfig.json
@@ -24,8 +24,12 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "typeRoots": ["@qualweb/types"] /* List of folders to include type definitions from. */,
-    "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */,
+
+    "types": [
+      "@qualweb/types",
+      "node",
+      "mocha",
+    ] /* Type declaration files to be included in compilation. */,
 
     /* Experimental Options */
     "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
