chore(act-rules): incorrect script name in launch configuration

--- a/packages/act-rules/.vscode/launch.json
+++ b/packages/act-rules/.vscode/launch.json
@@ -15,7 +15,7 @@
       "runtimeArgs": [
         "ts-node",
       ],
-      "program": "scripts/single-act-rule.ts",
+      "program": "scripts/run_act_rule.ts",
       "args": [
         "--url",
         "${input:url}",
