--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.7.0",
+  "version": "0.6.37",
   "description": "ACT rules module for qualweb web accessibility evaluator",
   "main": "dist/act.bundle.js",
   "files": [
@@ -12,6 +12,7 @@
     "test:rule": "mocha test/rule.spec.ts",
     "test:url": "mocha test/url.spec.ts",
     "validate:rules": "node validate-rules.js",
+    "compile:rules": "node compile-rules.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
@@ -37,9 +38,9 @@
   "devDependencies": {
     "@qualweb/dom": "0.2.10",
     "@qualweb/locale": "0.1.18",
-    "@qualweb/qw-page": "0.2.19",
+    "@qualweb/qw-page": "0.2.21",
     "@qualweb/types": "0.7.26",
-    "@qualweb/util": "0.5.39",
+    "@qualweb/util": "0.5.41",
     "@tsconfig/recommended": "^1.0.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.11.11",
