--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/wcag-techniques",
-  "version": "0.4.0",
+  "version": "0.3.17",
   "description": "Implementation of the WCAG 2.1 techniques",
   "main": "dist/wcag.bundle.js",
   "files": [
@@ -15,11 +15,13 @@
     "test:t33": "mocha test/techniques/QW-WCAG-T33.spec.mjs",
     "test:t34": "mocha test/techniques/QW-WCAG-T34.spec.mjs",
     "test:t35": "mocha test/techniques/QW-WCAG-T35.spec.mjs",
+    "compile:techniques": "node compile-techniques.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && webpack && rimraf prebuild",
+    "postbuild": "rimraf prebuild",
     "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/qualweb/wcag-techniques#readme",
@@ -44,9 +46,9 @@
   "devDependencies": {
     "@qualweb/dom": "0.2.10",
     "@qualweb/locale": "0.1.18",
-    "@qualweb/qw-page": "0.2.19",
+    "@qualweb/qw-page": "0.2.21",
     "@qualweb/types": "0.7.26",
-    "@qualweb/util": "0.5.39",
+    "@qualweb/util": "0.5.41",
     "@tsconfig/recommended": "^1.0.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^17.0.8",
