--- a/packages/counter/package.json
+++ b/packages/counter/package.json
@@ -35,7 +35,7 @@
   "author": "Pedro Santos",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.10",
+    "@qualweb/core": "0.7.69",
     "@qualweb/qw-page": "0.2.21",
     "@qualweb/types": "0.7.26",
     "@qualweb/util": "0.5.41",
