--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -59,7 +59,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.10",
+    "@qualweb/core": "0.7.69",
     "@qualweb/locale": "0.1.18",
     "@qualweb/qw-page": "0.2.21",
     "@qualweb/types": "0.7.26",
