--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -33,7 +33,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.10",
+    "@qualweb/core": "0.7.69",
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
     "@types/mocha": "^10.0.6",
