--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -38,7 +38,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.2.10",
+    "@qualweb/core": "0.7.69",
     "@qualweb/qw-page": "^0.2.19",
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
