--- a/packages/wcag-techniques/package.json
+++ b/packages/wcag-techniques/package.json
@@ -15,7 +15,6 @@
     "test:t33": "mocha test/techniques/QW-WCAG-T33.spec.mjs",
     "test:t34": "mocha test/techniques/QW-WCAG-T34.spec.mjs",
     "test:t35": "mocha test/techniques/QW-WCAG-T35.spec.mjs",
-    "compile:techniques": "node compile-techniques.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
@@ -44,7 +43,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "0.2.10",
+    "@qualweb/core": "0.7.69",
     "@qualweb/locale": "0.1.18",
     "@qualweb/qw-page": "0.2.21",
     "@qualweb/types": "0.7.26",
