Fixed more issues. Trying to get rid of the types package

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -6,6 +6,7 @@
   "files": [
     "dist/*"
   ],
+  "types": "./src/lib/types.ts",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha --spec=test/**/*.spec.ts",
