Removed @aualweb/lib from being referenced on the "cli" package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/qualweb/qualweb#readme",
   "workspaces": [
+    "packages/qw-element",
     "packages/*"
   ],
   "devDependencies": {
