--- a/packages/cli/tsconfig.prod.json
+++ b/packages/cli/tsconfig.prod.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist" /* Redirect output structure to the directory. */,
-    "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    // "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
     "removeComments": true /* Do not emit comments to output. */,
 
     /* Additional Checks */
@@ -16,7 +16,5 @@
     "typeRoots": ["@qualweb/types"] /* List of folders to include type definitions from. */,
     "types": ["@qualweb/types", "node"] /* Type declaration files to be included in compilation. */
   },
-  "include": [
-    "src/**/*.ts"
-  ]
+  "include": ["src"]
 }
